Updated academic CV

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -65,7 +65,7 @@
 				<p>I am a PhD student at the National and Kapodistrian University of Athens, working under the supervision of Professor
 				<a href = "http://scholar.uoa.gr/strevezas" target = "_blank" style="text-decoration: none;" class="w3-text-orange">Samis Trevezas</a>.
 					The research subject I am working on is statistical techniques for crop stage monitoring and prediction with remote sensing data.</p>
-					<a href="../files/cv.pdf" target="_blank" style="text-decoration: none;" class="w3-text-orange download="Ioannis Oikonomidis - Resume">
+					<a href="../files/Oikonomidis_Ioannis_resume.pdf" target="_blank" style="text-decoration: none;" class="w3-text-orange download="Ioannis Oikonomidis - Resume">
 					Click here to download my resume.</a>
 				<p>I would like to thank the <a href = "https://www.bodossaki.gr/en/" target = "_blank" style="text-decoration: none;" class="w3-text-orange">Bodossaki Foundation</a>
 					and the <a href = "https://fanourakisfoundation.org/" target = "_blank" style="text-decoration: none;" class="w3-text-orange">Fanourakis Foundation</a>
